# advent-of-code

./: .env-select.toml  .gitignore  LICENSE  README.md
2020/day1/: sol.hs
2020/day2/: Main.hs  day2.cabal
2020/day3/: Main.hs  day3.cabal
2020/day4/: Main.hs  day4.cabal
2020/day5/: Main.hs  day5.cabal
2020/day6/: Main.hs  day6.cabal
2021/: aoc.cabal  template.hst
2021/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Main.hs
2021/src/Utils/: Coord.hs  Mod.hs
2022/: Cargo.toml
2022/src/: main.rs  util.rs
2022/src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs  template.rs
2023/: Cargo.toml  rust-toolchain.toml
2023/src/: main.rs
2023/src/days/: day1.rs  day17.rs  day2.rs
2024/: Cargo.toml
2024/src/: days.rs  main.rs  tui.rs  util.rs
2024/src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day20.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
2024/src/tui/: widgets.rs
2025/: README.md  gleam.toml
2025/src/aoc_2025/: day_1.gleam
