[package]
edition = "2021"
name = "lucaspickering-aoc-2022"
version = "0.1.0"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
clap = {version = "3.2.20", features = ["derive"]}
derive_more = {version = "0.99.17", default-features = false, features = ["add", "add_assign", "display", "from", "from_str"]}
env_logger = "0.10.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.0"
