[package]
edition = "2021"
name = "lucaspickering-aoc-2024"
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.10", features = ["derive"]}
crossterm = "0.28.1"
derive_more = { version = "1.0.0", features = ["full"] }
env_logger = "0.10.1"
itertools = "0.13.0"
log = "0.4.20"
ratatui = "0.29.0"
regex = "1.11.1"
winnow = "0.6.20"
